# system-config-lvm

./: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.status  configure  configure.in  system-config-lvm.console  system-config-lvm.desktop.in  system-config-lvm.lang  system-config-lvm.pam
autom4te.cache/: output.0  output.1  requests  traces.0
po/: .intltool-merge-cache  Makefile  Makefile.in  POTFILES  POTFILES.in  ar.gmo  ar.po  as.gmo  as.po  bg.gmo  bg.po  bn.gmo  bn.po  bn_IN.gmo  bn_IN.po  bs.gmo  bs.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en_GB.gmo  en_GB.po  es.gmo  es.po  et.gmo  et.po  fa.gmo  fa.po  fi.gmo  fi.po  fr.gmo  fr.po  gu.gmo  (+72 more)
src/: BlockDevice.py  BlockDeviceModel.py  Cluster.py  CommandError.py  CommandHandler.py  ExtentBlock.py  Filesystem.glade  Filesystem.py  Fstab.py  InputController.py  LogicalVolume.py  Makefile  Makefile.am  Makefile.in  Multipath.py  Partition.py  PhysicalVolume.py  Properties_Renderer.py  Segment.py  Volume.py  VolumeGroup.py  Volume_Tab_View.py  WaitMsg.py  cylinder_items.py  execute.py  fdisk_wrapper.py  gi  helloworld.py  lv_edit_props.glade  lvm_model.py  lvmui_constants.py  lvui-new.glade  lvui.glade  lvui.glade.bak  migrate_extents.glade  parted_wrapper.py  pyex.py  renderer.py  system-config-lvm  system-config-lvm.py  (+1 more)
src/pixmaps/: LV.xpm  PV.xpm  UV.xpm  VG.xpm
